--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-ga4": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
