--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.24.0",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
     "react": "^19.0.0",
