--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.24.0",
+    "@react-spring/web": "^9.7.5",
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.0.4",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0"
+    "framer-motion": "^12.4.10",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.2.0",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
