--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.23.0",
     "@gradio/client": "^1.11.0",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
